--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <head>
-    <script src="js/test.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <ul>
-    <li>Choose the input ordinate (between -2.25 et 2.25)</li>
-    <li>Click on "Start" button</li>
-    <li>See the output angle</li>
-    </ul>
-    <br>
-    <form class="form-horizontal">
-        <fieldset> 
-        <legend>Input ordinate (between -2.25 et 2.25) :</legend>
-        <input type="text" id="ordinateId" class="input-medium search-query"/>
-        <input type="button" id="startbuttonId" value="Start" class="btn"/>
-        &nbsp;&nbsp;Take for example $b=0.33005$ and $b=0.33010$ to check the chaotic behavior.
-        </fieldset> 
-        <br>
-        <fieldset> 
-        <legend>Output angle (in radian) :</legend>
-        <input type="text" id="outputAngle" class="input-medium search-query"/>
-    </fieldset> 
-    </form>
-    <br>
-    <canvas class="center" id="plot" width="501" height="501"></canvas>
-    <script type="text/javascript" src="js/test.js"></script>
+    <div class="container-fluid">
+        <div class="p-2 my-4 rounded-3">
+            <form class="form-horizontal">
+                <fieldset> 
+                    <label>Input ordinate (between -2.25 et 2.25):</label>
+                    <input type="text" id="ordinateId" class="input-medium search-query" class="input-medium search-query" placeholder="Insert b value" aria-label="Recipient's username" aria-describedby="button-addon2">
+                    <button class="btn btn-outline-dark" type="button" id="startbuttonId">Start</button>
+                    &nbsp;&nbsp;Take for example <strong> b=0.33005 </strong> and <strong> b=0.33010 </strong> to check the chaotic behavior.
+                </fieldset> 
+                <fieldset> 
+                    <label>Output angle (in radian):</label>
+                    <input type="text" id="outputAngle" class="input-medium search-query"/>
+                </fieldset> 
+            </form>
+        </div>
+        <div class="d-flex flex-row justify-content-center">
+            <div class="rounded-3">
+                <canvas class="center" id="plot" width="500" height="500"></canvas>
+                <script type="text/javascript" src="js/graphs.js"></script>
+            </div>
+        </div>   
+    </div>
 </body>
 </html>
