--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
+        <div id="alert" class="alert alert-danger d-none" role="alert">
+            
+            Input must be between -2.25 et 2.25
+          </div>
+        <div class="d-flex title p-2 justify-content-center">
+            <h1>Gaspard Rice's System</h1>
+        </div>
         <div class="row">
             <div class="col align-items-start">
                 <div class="p-2 my-5 border rounded-3 bg-light">
@@ -35,7 +43,8 @@
                     </div>
                 </div>
             </div>
-        </div>   
+        </div>
+        </div>
     </div>
 </body>
 </html>
